<resources>
    <string name="app_name">VapulusTest</string>
    <string name="login_to_vapulus_label">Log in to Vapulus</string>
    <string name="login_username_label">Vapulus ID, email or mobile</string>
    <string name="login_password_label">Password</string>
    <string name="forget_password_label">Forget password?</string>
    <string name="login_label">Log in</string>
    <string name="or_login_with">or login with</string>
    <string name="new_to_vapulus">New to Vapulus?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_error">Login error! Please try again.</string>
    <string name="enter_valid_data">Please enter a valid data!</string>

    //PIN code screen strings resources
    <string name="num_pad_0">0</string>
    <string name="num_pad_1">1</string>
    <string name="num_pad_2">2</string>
    <string name="num_pad_3">3</string>
    <string name="num_pad_4">4</string>
    <string name="num_pad_5">5</string>
    <string name="num_pad_6">6</string>
    <string name="num_pad_7">7</string>
    <string name="num_pad_8">8</string>
    <string name="num_pad_9">9</string>
    <string name="logout">Logout</string>
    <string name="reset">Reset</string>
    <string name="enter_pin_code">Enter PIN Code</string>
    <string name="Forgot_pin_code">Forgot PIN CODE?</string>
    <string name="pin_code_validation_error">PIN-Code validation error! Please try again.</string>

</resources>